# sensor

devel/: .catkin  .rosinstall  setup.sh
devel/lib/A_code/: A_code  A_code_node
devel/lib/pkgconfig/: A_code.pc  test.pc  usb_cam.pc
devel/lib/usb_cam/: usb_cam_node
devel/share/A_code/cmake/: A_codeConfig.cmake
devel/share/test/cmake/: testConfig.cmake
devel/share/usb_cam/cmake/: usb_camConfig.cmake
src/A_code/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/A_code/include/: gray.hpp
src/A_code/nodes/: gray.cpp
src/A_code/src/: gray.cpp  realtime.cpp
src/usb_cam/launch/: .usb_cam-test.launch.swp
src/usb_cam/src/: usb_cam.cpp
